--- a/Day_3_Python_Operators_and_Lists_(1).ipynb
+++ b/Day_3_Python_Operators_and_Lists_(1).ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kaushikRajGhimire/Data-Science-Masters-Certification/blob/main/Day_3_Python_Operators_and_Lists_(1).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "f0c6558b-3dcd-4001-a68c-1a626809b437",
       "metadata": {
         "id": "f0c6558b-3dcd-4001-a68c-1a626809b437"
@@ -3552,7 +3562,8 @@
       "version": "3.10.8"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
