--- a/basic python assignment.ipynb
+++ b/basic python assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5eDtP9/cjyRyrJi4wR5IK",
+      "authorship_tag": "ABX9TyOkNqiNgPchMvMgFn52n2BX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,52 +29,66 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Guido van Rossum\n",
-        "2. pp,oops,fp,ip etc.\n",
-        "3. yes case sensitive\n",
-        "4. .py for python script and .ipynb for jupyter notebook\n",
-        "5.interpreted\n",
-        "6.functions,classes,if-else,loops\n",
-        "7. #\n",
-        "8. import sys\n",
-        "print(sys.version)\n",
-        "9. lambda function\n",
-        "10. pip stands for \"Pip Installs Packages\" and is the standard package manager for Python. It allows you to install, update, and manage external libraries and packages that are not included in the Python standard library.\n",
-        "11. print(),len(),append(),add(),pop(),count()\n",
-        "12. Readability and Simplicity: Python's clear and concise syntax makes it easy to read and write, promoting better understanding and collaboration among developers.\n",
+        "def calculate_grade():\n",
         "\n",
-        "Versatility: Python is a multi-paradigm language, supporting procedural, object-oriented, and functional programming styles, making it suitable for various applications.\n",
+        "    percentage = float(input(\"Enter your percentage: \"))\n",
+        "    if percentage >= 90:\n",
+        "        grade = \"A\"\n",
+        "    elif percentage >= 80:\n",
+        "        grade = \"B\"\n",
+        "    elif percentage >= 70:\n",
+        "        grade = \"C\"\n",
+        "    elif percentage >= 60:\n",
+        "        grade = \"D\"\n",
+        "    elif percentage >= 50:\n",
+        "        grade = \"E\"\n",
+        "    else:\n",
+        "        grade = \"F\"\n",
+        "    print(f\"Your grade is: {grade}\\n\")\n",
         "\n",
-        "Rich Ecosystem: Python has a vast standard library and a large collection of third-party packages available through pip, enabling developers to easily implement a wide range of functionalities.\n",
         "\n",
-        "Cross-Platform Compatibility: Python is platform-independent and can run on various operating systems like Windows, macOS, and Linux without modification.\n",
         "\n",
-        "Strong Community Support: Python has a large and active community, providing extensive documentation, tutorials, and forums for assistance and collaboration.\n",
+        "def calculate_road_tax():\n",
         "\n",
-        "Rapid Development: Python’s simplicity and powerful libraries allow for faster development cycles, making it ideal for prototyping and iterative development.\n",
+        "    cost_price = float(input(\"Enter the cost price of the bike: \"))\n",
+        "    if cost_price < 50000:\n",
+        "        road_tax = cost_price * 0.05\n",
+        "    elif cost_price < 100000:\n",
+        "        road_tax = cost_price * 0.1\n",
+        "    else:\n",
+        "        road_tax = cost_price * 0.15\n",
+        "    print(f\"Road tax to pay: {road_tax}\\n\")\n",
         "\n",
-        "Integration Capabilities: Python can easily integrate with other languages (like C/C++, Java) and technologies, allowing for versatile application development.\n",
+        "def important_places_in_city():\n",
         "\n",
-        "Popular in Data Science and AI: Python is widely used in data analysis, machine learning, and artificial intelligence due to its powerful libraries like NumPy, pandas, TensorFlow, and scikit-learn.\n",
+        "    city = input(\"Enter the city name: \").lower()\n",
+        "    places = {\n",
+        "        \"mumbai\": \"Gateway of India, Marine Drive, Chhatrapati Shivaji Terminus\",\n",
+        "        \"delhi\": \"India Gate, Red Fort, Qutub Minar\",\n",
+        "        \"bangalore\": \"Vidhana Soudha, Lalbagh Botanical Garden, Bangalore Palace\",\n",
+        "        \"chennai\": \"Marina Beach, Kapaleeshwarar Temple, Fort St. George\",\n",
+        "        \"kolkata\": \"Victoria Memorial, Howrah Bridge, Dakshineswar Kali Temple\"\n",
+        "    }\n",
+        "    important_places = places.get(city, \"Important places not found for this city.\")\n",
+        "    print(f\"Important places in {city.capitalize()}: {important_places}\\n\")\n",
         "\n",
-        "Web Development: Frameworks like Django and Flask make web development straightforward and efficient, allowing for quick deployment of web applications.\n",
+        "def divide_by_three():\n",
         "\n",
-        "Strong Support for Automation and Scripting: Python is an excellent choice for automation tasks, scripting, and system administration, streamlining repetitive tasks.\n",
+        "    number = int(input(\"Enter a number: \"))\n",
+        "    count = 0\n",
+        "    while number >= 10:\n",
+        "        number /= 3\n",
+        "        count += 1\n",
+        "    print(f\"The number can be divided by 3 {count} times before it becomes less than 10.\\n\")\n",
         "\n",
-        "13. Reference Counting: Each object keeps track of how many references point to it. When the reference count reaches zero, the memory is freed.\n",
-        "\n",
-        "Garbage Collection: Python automatically detects and cleans up objects with circular references that cannot be handled by reference counting.\n",
-        "\n",
-        "Memory Pools: Python uses a specialized allocator (pymalloc) for small objects to improve efficiency.\n",
-        "\n",
-        "Object-Specific Allocators: Built-in types (like lists and dictionaries) have their own memory management strategies for better performance.\n",
-        "\n",
-        "Memory Leaks: While Python helps prevent memory leaks, they can still occur. Tools like the gc module can be used to manage garbage collection manually\n",
-        "\n",
-        "14. python has indentation"
+        "# Run the functions\n",
+        "calculate_grade()\n",
+        "calculate_road_tax()\n",
+        "important_places_in_city()\n",
+        "divide_by_three()\n"
       ],
       "metadata": {
-        "id": "JJnTeQR6ylZn"
+        "id": "jz4AieC72-Gz"
       }
     }
   ]
